--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,21 @@
 CHANGES
 =======
 
+0.1.0
+-----
+
+* Updated from global requirements
+* Remove config module
+* Updated from global requirements
+* Revert "Add Collector Agent type string"
+* Remove fake_consume_in_threads dummy method
+* Updated from global requirements
+
 0.0.3
 -----
 
 * Add pagination helpers
+* New device owner flag for HA router interface
 * Fix 'import neutron' hacking check
 * Add in missing constants
 * Remove unused pngmath Sphinx extension
